[gd_scene load_steps=5 format=3 uid="uid://dew58jfab0epy"]

[ext_resource type="LabelSettings" uid="uid://d1n0tlccdmsmg" path="res://Fonts/new_label_settings.tres" id="1_cq6fb"]
[ext_resource type="Script" path="res://Scenes/end_screen.gd" id="1_hn68o"]
[ext_resource type="LabelSettings" uid="uid://c6j0pqxqlgshm" path="res://Fonts/Score_label.tres" id="2_64mgl"]
[ext_resource type="Texture2D" uid="uid://cbgpg2pb6clr2" path="res://Frames/transparent_mushroom.png" id="3_2dbay"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hn68o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Quote" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -339.0
offset_top = 40.0
offset_right = 376.0
offset_bottom = 200.0
grow_horizontal = 2
text = "Even in death and decay, there is beauty."
label_settings = ExtResource("1_cq6fb")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Score" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -39.0
offset_right = 193.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
text = "Your score:               "
label_settings = ExtResource("2_64mgl")

[node name="Dead_nodes" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -14.0
offset_right = 174.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
text = "Dead colonies:       "
label_settings = ExtResource("2_64mgl")

[node name="TransparentMushroom" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1010, 430)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_2dbay")

[node name="TransparentMushroom2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(190, 407)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_2dbay")

[node name="colonies_placed" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = 11.0
offset_right = 181.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Colonies placed:  "
label_settings = ExtResource("2_64mgl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = -2.0
offset_right = 1156.0
offset_bottom = 649.0
color = Color(0, 0, 0, 0.823529)
metadata/_edit_group_ = true

[node name="again_button" type="Button" parent="."]
offset_left = 483.0
offset_top = 417.0
offset_right = 621.0
offset_bottom = 456.0
text = "Play again!"

[node name="quit_button" type="Button" parent="."]
offset_left = 483.0
offset_top = 473.0
offset_right = 621.0
offset_bottom = 512.0
text = "Quit"
